[tool.poetry]
name = "ken-kindle"
version = "0.1.0"
description = ""
authors = ["Akarsh Jain <akarsh.1995.02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.24.0"
selenium = "^3.141.0"
readability-lxml = "^0.8.1"
pywebcopy = "^6.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
